--- a/src/compoonents/dashboards/CourseOffered.css
+++ b/src/compoonents/dashboards/CourseOffered.css
@@ -7,3 +7,77 @@
     border-top: 1px rgb(255, 170, 0) solid;
     border-bottom: 1px rgb(255, 170, 0) solid;
 }
+#courses{
+    margin-top: 20px;
+    height: 400px;
+    display: flex;
+}
+#courses_left{
+    height: 100%;
+    width: 50%;
+    margin-left: 200px;
+}
+#courses_right{
+    height: 100%;
+    width: 50%;
+    margin-right: 200px;
+}
+.crs_left{
+    margin-right: 10px;
+    height: 150px;
+    position: relative;
+}
+.crs_right{
+    margin-left: 10px;
+    height: 33%;
+    position: relative;
+}
+.heading{
+    font-size: 1.6rem;
+    font-weight: 700;
+    position: absolute;
+    top: 15px;
+    left: 10px;
+    display: flex;
+}
+.para p{
+    font-weight: 400;
+    font-size: 14px;
+}
+.para{
+    position: absolute;
+    top: 60px;
+    left: 10px;
+}
+span{
+    padding-top: 8px;
+    padding-right: 7px;
+}
+#register_btn button{
+    background-color: rgb(0, 81, 255);
+    color: white;
+    padding: 15px;
+    border-radius: 10px;
+    position: fixed;
+    top: 350px;
+    left: -110px;
+    transform: rotate(90deg);
+    z-index: 1200;
+}
+#whatsapp{
+    position: fixed;
+    top: 640px;
+    z-index: 1200;
+    margin-left: 10px;
+}
+#call{
+    background-color: blue;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    padding: 10px;
+    position: fixed;
+    top: 640px;
+    left: 50%;
+    z-index: 1200;
+}
